--- a/html/index.html
+++ b/html/index.html
@@ -139,9 +139,7 @@
                     {
                         method: "POST",
                         body: JSON.stringify({
-                            bucketName: "fiappostech-signed-url-service",
-                            key: "uploads/" + encodeURIComponent(fileName),
-                            expiresIn: 3600,
+                            fileName: encodeURIComponent(fileName),
                             fileType: fileType,
                         }),
                         headers: {
@@ -150,7 +148,11 @@
                         },
                     }
                 );
-                const { url } = await response.json();
+                const { id, url } = await response.json();
+                console.log('-');
+                console.log('fileName: ' , fileName);
+                console.log('id: ' , id);
+                console.log('-');
                 return url;
             }
 
@@ -179,7 +181,7 @@
                         }
                     });
 
-                    // Animação fake de progresso
+
                     let p = document.getElementById(`progress-${index}`);
                     let val = 0;
                     const interval = setInterval(() => {
